service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app
spec:
  ports:
  - port: 5555
    protocol: TCP
    targetPort: 5555
  selector:
    app: go-app
