ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: go-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - secretName: go-app
    hosts:
    - test.sample.com
  rules:
  - host: test.sample
    http:
      paths:
      - backend:
          serviceName: go-app
          servicePort: 5555
